# building-facades-damage-prediction

./: .dvcignore  .flake8  .gitignore  .pre-commit-config.yaml  README.md  buildings_map.html  pyproject.toml
.dvc/: config
configs/: config.yaml
data/interim/: Camera_train_addresses.csv  all_mapped_buildings.csv  building_features_139.csv  building_features_206.csv  building_features_206_final_fit.csv  building_features_300-40d.csv  building_features_300.csv  facade_damage_scores_logreg.csv  facade_damage_scores_ranked.csv  facade_damage_scores_ranked_206_final_fit.csv  ranking_pairs.csv  ranking_pairs_coating_deterioration.csv  ranking_pairs_cracks.csv  ranking_pairs_masonry_degradation.csv  ranking_pairs_moisture_bio_damage.csv  ranking_pairs_vandalism.csv  yandex_panoramas_for_inference.csv  yandex_panoramas_for_inference.json
data/literature-analysis/: Jil_fond_2019-2024.xls  data-mrnYS.csv
docs/: model_evaluation_report.md  pipeline_damage_index_before_gnn_v3.md  ranking_lr_approach.md  segformer_pipeline.md
master-thesis-text/: historical_buildings_russia.html  ВКР_2026.md
master-thesis-text/diploma_template_v2/: bib.bib  main.aux  main.bbl  main.bcf  main.blg  main.out  main.tex  (+2 more)
notebooks/: 1. kaggle-segformer-training-v2.1.ipynb  2-1-segformer-inference-40d-vector.ipynb  2. segformer-inference-v2.ipynb  4-1-facade-damage-ranking-logreg.ipynb  4. facade-damage-ranking.ipynb  kaggle-segformer-training-v2.1_206_imgs.ipynb  kaggle-segformer-training.ipynb  kaggle-segformer-training_v2.ipynb  seg_ds_fiftyone.ipynb  segformer-inference-v2.ipynb  test.ipynb
(+9 files in other folders)
