[project]
name = "building-facades-damage-prediction"
version = "0.1.0"
description = "Facade damage prediction and segmentation for GNN integration"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "albumentations>=1.4.24",
    "dvc[s3]>=3.59.1",
    "matplotlib>=3.10.1",
    "numpy>=2.2.3",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "tqdm>=4.67.1",
    "wandb>=0.19.7",
    "pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
